# SLAM-noted

./: README.md
LOAMs-noted/: readme.md
LOAMs-noted/A-LOAM/: CMakeLists.txt  flow.txt  package.xml  readme.md
LOAMs-noted/A-LOAM/include/aloam_velodyne/: common.h  tic_toc.h
LOAMs-noted/A-LOAM/launch/: aloam_velodyne_VLP_16.launch
LOAMs-noted/A-LOAM/src/: laserMapping.cpp  laserOdometry.cpp  lidarFactor.hpp  scanRegistration.cpp
LOAMs-noted/LIO-SAM/: CMakeLists.txt  package.xml  readme.md
LOAMs-noted/LIO-SAM/config/: params.yaml
LOAMs-noted/LIO-SAM/files/: flow.txt  程序错误表现的成因分析与记录.txt
LOAMs-noted/LIO-SAM/include/: utility.h
LOAMs-noted/LIO-SAM/launch/: run.launch
LOAMs-noted/LIO-SAM/launch/include/: module_loam.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
LOAMs-noted/LIO-SAM/msg/: cloud_info.msg
LOAMs-noted/LIO-SAM/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptimization.cpp
LOAMs-noted/LeGO-LOAM/: README.md
LOAMs-noted/LeGO-LOAM/include/: utility.h
LOAMs-noted/LeGO-LOAM/src/: featureAssociation.cpp  imageProjection.cpp  mapOptmization.cpp  transformFusion.cpp
LOAMs-noted/lins/: README.md  file.xmind  map_node_varible.xmind  node_topic.xmind
LOAMs-noted/lins/cloud_msgs/: CMakeLists.txt  package.xml
LOAMs-noted/lins/cloud_msgs/msg/: cloud_info.msg
LOAMs-noted/lins/lins/: CMakeLists.txt  package.xml
LOAMs-noted/lins/lins/config/exp_config/: exp_port.yaml
LOAMs-noted/lins/lins/include/: Estimator.h  KalmanFilter.hpp  MapRingBuffer.h  StateEstimator.hpp  integrationBase.h  math_utils.h  parameters.h  sensor_utils.hpp  tic_toc.h  ultility.h
LOAMs-noted/lins/lins/launch/exp_launch/: run_port_exp.launch
LOAMs-noted/lins/lins/src/: image_projection_node.cpp  lidar_mapping_node.cpp  lins_fusion_node.cpp  transform_fusion_node.cpp
LOAMs-noted/lins/lins/src/lib/: Estimator.cpp  parameters.cpp
LOAMs-noted/loam/: .gitignore  readme.md
LOAMs-noted/loam/include/loam_velodyne/: common.h
LOAMs-noted/loam/src/: laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp  transformMaintenance.cpp
li/: R output in terminal  W output in terminal  readme.md
li/src/frame/: CMakeLists.txt  info.txt  package.xml
li/src/frame/cmake/: PCL.cmake  geographic.cmake  global_defination.cmake  glog.cmake
li/src/frame/config/mapping/: back_end.yaml  front_end.yaml  loop_closing.yaml  viewer.yaml
li/src/frame/include/frame/data_pretreat/: data_pretreat_flow.hpp
li/src/frame/include/frame/global_defination/: global_defination.h  global_defination.h.in
li/src/frame/include/frame/mapping/back_end/: back_end.hpp  back_end_flow.hpp
li/src/frame/include/frame/mapping/front_end/: front_end.hpp  front_end_flow.hpp
li/src/frame/include/frame/mapping/loop_closing/: loop_closing.hpp  loop_closing_flow.hpp
li/src/frame/include/frame/mapping/viewer/: viewer.hpp  viewer_flow.hpp
li/src/frame/include/frame/models/cloud_filter/: cloud_filter_interface.hpp  no_filter.hpp  voxel_filter.hpp
li/src/frame/include/frame/models/graph_optimizer/: interface_graph_optimizer.hpp
li/src/frame/include/frame/models/graph_optimizer/g2o/: g2o_graph_optimizer.hpp
li/src/frame/include/frame/models/graph_optimizer/g2o/edge/: edge_se3_priorquat.hpp  edge_se3_priorxyz.hpp
li/src/frame/include/frame/models/registration/: ndt_registration.hpp  registration_interface.hpp
li/src/frame/include/frame/models/scan_adjust/: distortion_adjust.hpp
li/src/frame/include/frame/publisher/: cloud_publisher.hpp  imu_publisher.hpp  key_frame_publisher.hpp  key_frames_publisher.hpp  loop_pose_publisher.hpp  odometry_publisher.hpp
li/src/frame/include/frame/sensor_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  key_frame.hpp  loop_pose.hpp  pose_data.hpp  velocity_data.hpp
li/src/frame/include/frame/subscriber/: cloud_subscriber.hpp  gnss_subscriber.hpp  imu_subscriber.hpp  key_frame_subscriber.hpp  key_frames_subscriber.hpp  loop_pose_subscriber.hpp  odometry_subscriber.hpp  velocity_subscriber.hpp
li/src/frame/include/frame/tf_listener/: tf_listener.hpp
li/src/frame/include/frame/tools/: file_manager.hpp  print_info.hpp  tic_toc.hpp
li/src/frame/launch/: mapping.launch
li/src/frame/src/: flow.c
li/src/frame/src/apps/: back_end_node.cpp  data_pretreat_node.cpp  front_end_node.cpp  loop_closing_node.cpp  viewer_node.cpp
li/src/frame/src/data_pretreat/: data_pretreat_flow.cpp
li/src/frame/src/mapping/back_end/: back_end.cpp  back_end_flow.cpp
li/src/frame/src/mapping/front_end/: front_end.cpp  front_end_flow.cpp
li/src/frame/src/mapping/loop_closing/: loop_closing.cpp  loop_closing_flow.cpp
li/src/frame/src/mapping/viewer/: viewer.cpp  viewer_flow.cpp
li/src/frame/src/models/cloud_filter/: no_filter.cpp  voxel_filter.cpp
li/src/frame/src/models/graph_optimizer/: interface_graph_optimizer.cpp
li/src/frame/src/models/graph_optimizer/g2o/: g2o_graph_optimizer.cpp
li/src/frame/src/models/registration/: ndt_registration.cpp
li/src/frame/src/models/scan_adjust/: distortion_adjust.cpp
li/src/frame/src/publisher/: cloud_publisher.cpp  key_frame_publisher.cpp  key_frames_publisher.cpp  loop_pose_publisher.cpp  odometry_publisher.cpp
li/src/frame/src/sensor_data/: gnss_data.cpp  imu_data.cpp  key_frame.cpp  loop_pose.cpp  pose_data.cpp  velocity_data.cpp
li/src/frame/src/subscribler/: cloud_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  key_frame_subscriber.cpp  key_frames_subscriber.cpp  loop_pose_subscriber.cpp  odometry_subscriber.cpp  velocity_subscriber.cpp
li/src/frame/src/tf_listener/: tf_listener.cpp
li/src/frame/src/tools/: file_manager.cpp  print_info.cpp
