<?xml version="1.0"?>          <!--老版本的package.xml文件-->
<package>                      <!--package为根标签-->
  <name>aloam_velodyne</name>   <!--包名-->
  <version>0.0.0</version>     <!--版本号-->
<!---->
  <description>
    This is an advanced implentation of LOAM.
    LOAM is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>

  <maintainer email="wang0jun0peng@163.com">qingshi</maintainer>

  <license>BSD</license>        <!--软件许可证-->

  <author email="wang0jun0peng@163.com">qingshi</author>

  <!--编译构建工具，通常为catkin-->
  <buildtool_depend>catkin</buildtool_depend>
  <!--编译依赖项-->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <!--运行依赖项-->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>

  <export>
  </export>
</package>